nav issue alignment in base.css

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -82,8 +82,4 @@ main {
     .menu-icon {
         display: none;
     }
-    nav {
-        display: flex;
-        justify-content: flex-start;
-    }
 }
